--- a/src/public/index.html
+++ b/src/public/index.html
@@ -10,7 +10,7 @@
 
 <body>
 <div class="grid-container">
-  <div id="global-navigation" class="global-navigation">
+  <nav id="global-navigation" class="global-navigation">
     <div class="global-navigation__left">
       <div class="global-navigation__item">
         <a href="#" class="global-navigation__item-link global-navigation__item-link--active">
@@ -41,11 +41,10 @@
       </span>
       </button>
     </div>
-    </nav>
-    <nav id="site-navigation" class="full-width">
+  </nav>
+  <nav id="site-navigation" class="full-width">
 
-    </nav>
-  </div>
+  </nav>
 </div>
 <div class="null-pointer">
   <div data-lang-dropdown-list class="lang-select__dropdown">
