adding style to site nav WIP.

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,6 +6,7 @@
   <title>
     Ernieball Navigation
   </title>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
 </head>
 
 <body>
@@ -42,8 +43,22 @@
       </button>
     </div>
   </nav>
-  <nav id="site-navigation" class="full-width">
-
+  <nav id="site-navigation" class="site-navigation">
+    <div class="site-navigation__left">
+      <img class="ernie-ball-logo" src="./img/eb-logo.svg" alt="Ernie Ball Logo">
+    </div>
+    <div class="site-navigation__center">
+      <ul class="site-navigation__list">
+        <li class="site-navigation__item"><a class="site-navigation__link" href="#">store</a></li>
+        <li class="site-navigation__item"><a class="site-navigation__link" href="#">store</a></li>
+        <li class="site-navigation__item"><a class="site-navigation__link" href="#">store</a></li>
+        <li class="site-navigation__item"><a class="site-navigation__link" href="#">store</a></li>
+        <li class="site-navigation__item"><a class="site-navigation__link" href="#">store</a></li>
+      </ul>
+    </div>
+    <div class="site-navigation__right">
+      b
+    </div>
   </nav>
 </div>
 <div class="null-pointer">
