- added mobile breakpoints to site navigation.

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -50,7 +50,7 @@
       </a>
     </div>
     <div class="site-navigation__center">
-      <ul class="site-navigation__list">
+      <ul class="site-navigation__list hide-mobile">
         <li class="site-navigation__item"><a class="site-navigation__link" href="#">Strings</a></li>
         <li class="site-navigation__item"><a class="site-navigation__link" href="#">Accessories</a></li>
         <li class="site-navigation__item"><a class="site-navigation__link" href="#">Merch</a></li>
@@ -72,6 +72,11 @@
             <div class="site-navigation__button-badge">
               <span class="site-navigation__button-badge-count">1</span>
             </div>
+          </button>
+        </li>
+        <li class="site-navigation__item-alt show-mobile">
+          <button class="site-navigation__button">
+            <img src="./img/hamburger.svg" alt="">
           </button>
         </li>
       </ul>
