--- a/src/public/index.html
+++ b/src/public/index.html
@@ -167,15 +167,298 @@
 <!-- END: Global Navigation Bar Locale Flyout -->
 
 <!-- START: Site Navigation Bar Desktop Flyout -->
-<nav class="flyout__desktop-nav">
+<nav class="flyout__desktop-nav ">
   <div class="flyout__container">
     <div class="flyout__column flyout__column-stamp">
-  0
+      <ul class="flyout__group">
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat ">New Releases</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat ">Best Sellers</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat ">10% off guitar picks</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat ">Tremolo Pedal Make waves!</a>
+        </li>
+        <li>
+          <a href="#" class="secondary-list-item--flat promo-item">
+            <img src="./img/pedal.png" alt="">
+          </a>
+        </li>
+      </ul>
     </div>
-    <div class="flyout__column">1</div>
-    <div class="flyout__column">2</div>
-    <div class="flyout__column">3</div>
-    <div class="flyout__column">4</div>
+    <div class="flyout__column">
+      <ul class="flyout__group">
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat">Category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item">Category 2</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">See all</a>
+        </li>
+      </ul>
+    </div>
+    <div class="flyout__column">
+      <ul class="flyout__group">
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat ">Category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat ">Category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat ">Category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat ">Category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat ">Category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat ">Category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat ">Category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat ">Category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat ">Category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat ">Category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat ">Category 1</a>
+        </li>
+
+      </ul>
+    </div>
+    <div class="flyout__column">
+      <ul class="flyout__group">
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat">Category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item">Category 2</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">See all</a>
+        </li>
+      </ul>
+    </div>
+    <div class="flyout__column">
+      <ul class="flyout__group">
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat">Category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item">Category 2</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">See all</a>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
 <!-- END: Site Navigation Bar Desktop Flyout -->
