- Added active state to primary navigation.

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -167,7 +167,7 @@
 <!-- END: Global Navigation Bar Locale Flyout -->
 
 <!-- START: Site Navigation Bar Desktop Flyout -->
-<nav class="flyout__desktop-nav" data-site-link>
+<nav class="flyout__desktop-nav" data-site-link="*" data-site-root>
   <div class="flyout__container" data-site-outlet="0">
     <div class="flyout__column flyout__column-stamp">
       <ul class="flyout__group">
@@ -519,6 +519,484 @@
         </li>
         <li class="flyout__group-item">
           <a href="#" class="tertiary-list-item tertiary-list-item--all">See all</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="flyout__container" data-site-outlet="2">
+    <div class="flyout__column flyout__column-stamp">
+      <ul class="flyout__group">
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat ">New Releases</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat ">Best Sellers</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat ">10% off guitar picks</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat ">Tremolo Pedal Make waves!</a>
+        </li>
+        <li>
+          <a href="#" class="secondary-list-item--flat promo-item">
+            <img src="./img/pedal.png" alt="">
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="flyout__column">
+      <ul class="flyout__group">
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat">Category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item">Category 2</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item tertiary-list-item--all">See all</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="flyout__container" data-site-outlet="3">
+    <div class="flyout__column flyout__column-stamp">
+      <ul class="flyout__group">
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat ">New Releases</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat ">Best Sellers</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat ">10% off guitar picks</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat ">Tremolo Pedal Make waves!</a>
+        </li>
+        <li>
+          <a href="#" class="secondary-list-item--flat promo-item">
+            <img src="./img/pedal.png" alt="">
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="flyout__column">
+      <ul class="flyout__group">
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat">Category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item">Category 2</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item tertiary-list-item--all">See all</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="flyout__container" data-site-outlet="4">
+    <div class="flyout__column flyout__column-stamp">
+      <ul class="flyout__group">
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat ">New Releases</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat ">Best Sellers</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat ">10% off guitar picks</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat ">Tremolo Pedal Make waves!</a>
+        </li>
+        <li>
+          <a href="#" class="secondary-list-item--flat promo-item">
+            <img src="./img/pedal.png" alt="">
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="flyout__column">
+      <ul class="flyout__group">
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat">Category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item">Category 2</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item tertiary-list-item--all">See all</a>
+        </li>
+      </ul>
+    </div>
+
+    <div class="flyout__column">
+      <ul class="flyout__group">
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat">Category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item">Category 2</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item tertiary-list-item--all">See all</a>
+        </li>
+      </ul>
+    </div>
+    <div class="flyout__column">
+      <ul class="flyout__group">
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat">Category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item">Category 2</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="tertiary-list-item tertiary-list-item--all">See all</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="flyout__container" data-site-outlet="5">
+    <div class="flyout__column flyout__column-stamp">
+      <ul class="flyout__group">
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat ">New Releases</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat ">Best Sellers</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat ">10% off guitar picks</a>
+        </li>
+        <li class="flyout__group-item">
+          <a href="#" class="secondary-list-item--flat ">Tremolo Pedal Make waves!</a>
+        </li>
+        <li>
+          <a href="#" class="secondary-list-item--flat promo-item">
+            <img src="./img/pedal.png" alt="">
+          </a>
         </li>
       </ul>
     </div>
