- WIP data model.. almost done.

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -195,47 +195,18 @@
         <li class="flyout__group-item" data-site-category="0">
           <a href="#" class="secondary-list-item--flat">Major Cateogry</a>
         </li>
-        <li class="flyout__group-item" data-site-subcategory="0" >
-          <a href="#" class="tertiary-list-item" >Sub-category 1</a>
+        <li class="flyout__group-item" data-site-subcategory="0">
+          <a href="#" class="tertiary-list-item">Major Sub-category 1</a>
         </li>
 
         <li class="flyout__group-item" data-site-category="1">
           <a href="#" class="secondary-list-item">Minor Category</a>
         </li>
         <li class="flyout__group-item" data-site-subcategory="1">
-          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+          <a href="#" class="tertiary-list-item">Minor Sub-category 1</a>
         </li>
         <li class="flyout__group-item" data-site-subcategory="1">
-          <a href="#" class="tertiary-list-item tertiary-list-item--all">See all</a>
-        </li>
-      </ul>
-    </div>
-
-    <div class="flyout__column">
-      <ul class="flyout__group">
-        <li class="flyout__group-item">
-          <a href="#" class="secondary-list-item--flat" data-site-category>Category 1</a>
-        </li>
-        <li class="flyout__group-item">
-          <a href="#" class="tertiary-list-item" data-site-subcategory>Sub-category 1</a>
-        </li>
-
-        <li class="flyout__group-item">
-          <a href="#" class="secondary-list-item"  data-site-category>Category 2</a>
-        </li>
-        <li class="flyout__group-item">
-          <a href="#" class="tertiary-list-item" data-site-subcategory>Sub-category 1</a>
-        </li>
-      </ul>
-    </div>
-    <div class="flyout__column">
-      <ul class="flyout__group">
-        <li class="flyout__group-item">
-          <a href="#" class="secondary-list-item--flat"  data-site-category>Category 1</a>
-        </li>
-
-        <li class="flyout__group-item">
-          <a href="#" class="secondary-list-item"  data-site-category>Category 2</a>
+          <a href="#" class="tertiary-list-item tertiary-list-item--all">Minor See all</a>
         </li>
       </ul>
     </div>
